--- a/views/foods/edit.erb
+++ b/views/foods/edit.erb
@@ -11,10 +11,10 @@
 	<input id="food_price"type="number" name='food[price]'value="<%= @food.price%>"><br>
 
 	<label for="food_allergens">Allergens:</label>
-	<input id="food_allergens" type="text" name='food[allergens]' value="<%= @food.allergens%>"><br>
+	<input id="food_allergens"type="text" name='food[allergens]'value="<%= @food.allergens%>"><br>
 
 	<input type="hidden" name="_method" value="patch">
-	<input type="submit" value="Edit this item!">
+	<input type="submit" value="Update!">
 </form>
 
 
