--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,15 +1,17 @@
 <html>
 <head>
 	<title></title>
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>	
+	<link rel="stylesheet" href="stylesheets/test_style.css">
 </head>
 <nav>
-    <ul>
-    <li><a href ="/foods">Menu</a></li>
-    <li><a href ="/orders">Orders</a></li>
-    <li><a href ="/parties">Parties</a></li>
-    </ul>
+	<ul>
+		<li><a href ="/foods">Menu</a></li>
+		<li><a href ="/orders">Orders</a></li>
+		<li><a href ="/parties">Parties</a></li>
+	</ul>
 </nav>
 <body>
-<%= yield %>
+	<%= yield %>
 </body>
 </html>
