--- a/views/parties/new.erb
+++ b/views/parties/new.erb
@@ -8,7 +8,8 @@
 		<% end %>
 	</select>
 	<br>
-	<label for="party_people">Number of Guests:</label>
-	<input id="party_people" type="number" name='party[people]' min=1 max=6 ><br>
+	<label for="party_guests">Number of Guests:</label>
+	<input id="party_guests" type="number" name='party[guests]' min=1 max=6 ><br>
+
 	<input type="submit" value="Add Table">
 </form>
