--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,9 @@
-"HELLO"
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" href="stylesheets/test_style.css">
+</head>
+<body>
+<h1>Restaurant Manager</h1>
+</body>
+</html>
