--- a/views/parties/show.erb
+++ b/views/parties/show.erb
@@ -1,5 +1,35 @@
 <h2>Table Number: <%= @party.table_id %></h2>
 <h3>Party of: <%= @party.guests %></h3>
+<h3>Paid: 
+    <% if @party.paid %>
+    Yes
+    <% else %>
+    No
+    <% end %>
+</h3>
+<br>
 
+<!-- < % @party.guests.times do %> -->
+<!-- <form action="/orders" method='POST'> -->
+<!-- <select name ="order[food_id][]">   -->
 
-<h3><a href="/parties/<%=@party.id %>/edit">Edit Party</a></h3>
+	<!-- < % @foods.each do |food| %> -->
+
+	<!-- <option id="party_name" type="text" value="< %= food.id %>"> -->
+		<!-- < %= food.name %>  -->
+	<!-- </option>
+	< % end %>
+
+</select>
+
+  <input id="order_comped" type="checkbox" name="order[comped][]" value="true">Comped?</input> -->
+
+  <!-- < % end %> -->
+
+ <!--  <input type="submit" value="Submit Order">
+</form> -->
+<h3><a href="/parties/<%=@party.id%>/edit">Edit This Party</a></h3><br>
+<h3><a href="/parties/<%=@party.id%>/new_order">Add Order To Party</a></h3>
+<br>
+<h3><a href="/parties/<%=@party.id%>/receipt">Show Receipt</a></h3><br>
+<h3><a href="/parties/<%=@party.id %>/closeout">Close Tab</a></h3>
