--- a/views/foods/new.erb
+++ b/views/foods/new.erb
@@ -10,6 +10,9 @@
 	<label for="food_price">Price:</label>
 	<input id="food_price"type="number" name='food[price]'value=0><br>
 
+	<label for="food_allergens">Allergens:</label>
+	<input id="food_allergens" type="text" name='food[allergens]'><br>
+
 	<input type="submit" value="Add New Food!">
 </form>
 
