--- a/views/orders/edit.erb
+++ b/views/orders/edit.erb
@@ -10,7 +10,11 @@
   		<input type="hidden" name="_method" value="DELETE">
  		 <input type="submit" value="Delete Item">
 		</form>
-			<%end%>
+			<% end %>
 	<% else %>
-			<p>"Nothing ordered yet!" </p>
-	<%end%>
+			<p>"Currently No Orders"</p>
+	<% end %>
+
+<!-- ADD LIST OF ALL FOOD ITEMS FOR THIS ORDER -->
+
+<!-- BUTTON TO ADD MORE FOOD -->
