--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,5 +1,5 @@
 <h1>Current Tabs</h1>
-<h3><a href="/orders/new">Open A New Tab</a></h3>
+<h3><a href="/parties">Start A New Order</a></h3>
 <ul>
 <% @orders.each do |order| %>
   <li><a href="/orders/<%= order.id %>"><%= order.id %></li>
