--- a/views/orders/new.erb
+++ b/views/orders/new.erb
@@ -15,7 +15,7 @@
 	</select>
 	<br>
 	<br>
-	<input id="order_comped" type="checkbox" name="order[comped]" value="false">Comped?</input>
+	<input id="order_comped" type="checkbox" name="order[comped]" value="true">Comped?</input>
 	<br>
 	<br>
 	<input type="submit" value="Submit Order">
