--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -2,11 +2,13 @@
 
 <p>Table Number:<%=@order.party_id%></p>
 
-<p>Food Orders:<%=@order.food.name%></p>
-
+<!-- <p>Food Orders:< %=@order.food.name%></p>
+ -->
 <p>Comped:<%=@order.comped%></p>
 
-<p>Price:<%=@order.food.price%></p>
+<!-- <p>Price:< %=@order.food.price%></p> -->
+
+<!-- ADD BUTTON TO ADD MORE FOOD -->
 
 <a href="/orders/<%=@order.id%>/edit">Edit Order</a>
 
