--- a/views/orders/new.erb
+++ b/views/orders/new.erb
@@ -1,4 +1,4 @@
-<h2>Create an new order</h2>
+<h2>Create a New Order for Table: <%=@party.table_id%></h2>
 
 <% @party.guests.times do %>
 <form action="/orders" method='POST'>
@@ -21,35 +21,3 @@
 	<input type="submit" value="Submit Order">
 
 </form>
-
-
-
-<!-- <form action="/orders" method="POST">
-
-	<label for="party_name">Choose Table</label>
-
-	<select name ="parties[table_id]">
-		< % @parties.each do |party| %>
-		<option id="party_name" type="number" value="< %= party.table_id%>">
-			< %= party.table_id %> 
-		</option>
-		< % end %>
-
-	</select>
-	
-	<br>
-
-	<select name ="order[food_id]">
-		
-		< % @foods.each do |food| %>
-
-		<option id="party_name" type="text" value="< %= food.id %>">
-			< %= food.name %> 
-		</option>
-		< % end %>
-
-	</select>
-
-	<input type="submit" value="Add it!">
-
-</form> -->
