--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,8 +1,6 @@
-<h1>Current Tabs</h1>
-<h3><a href="/parties">Start A New Order</a></h3>
+<h1>Current Food Orders</h1>
 <ul>
 <% @orders.each do |order| %>
-  <li><a href="/orders/<%= order.id %>"><%= order.id %></li>
-  
+  <li><a href="/orders/<%= order.id %>">Order Number: <%= order.id %></a> for Table ID: <%= order.party_id %></li>
 <% end %>
 </ul>
