--- a/views/parties/show.erb
+++ b/views/parties/show.erb
@@ -1,27 +1,28 @@
-<h2>Table Number: <%= @party.table_id %></h2>
-<h3>Party of: <%= @party.guests %></h3>
-<h3>Paid: 
+<h2 id="table">Table Number: <%= @party.table_id %></h2>
+<h3 id="show">Party of: <%= @party.guests %></h3>
+<h3 id="show">Party Name: <%= @party.party_name %></h3>
+<h3 id="show">Server: <%= @employee.name %></h3>
+<h3 id="show">Paid: 
 	<% if @party.paid %>
 	Yes
 	<% else %>
 	No
 	<% end %>
 </h3>
-<br>
-
 <h2>Orders:</h2>
 <ul>
 	<% @party.orders.map do |order| %>
-	<li><%= order.food.name %>: $<%= order.food.price %>.00
+	<li><%= order.food.name %>: &pound;<%= order.food.price %>.00
 	</li>
 	<% end %>
 </ul>
 
-<h3><a href="/parties/<%=@party.id%>/edit">Edit This Party</a></h3><br>
+<h3><a id="show" href="/parties/<%=@party.id%>/edit">Edit This Party</a></h3><br>
 <!-- <h3><a href="/orders/< %=@order.id%>/edit">Edit This Order</a></h3><br> -->
-<h3><a href="/parties/<%=@party.id%>/new_order">Add Order To Party</a></h3>
+<h3><a id="show" href="/parties/<%=@party.id%>/new_order">Add Order To Party</a></h3>
 <br>
-<h3><a href="/parties/<%=@party.id%>/receipt">Show Receipt</a></h3><br>
-<h3><a href="/parties/<%= @party.id %>/close">Close Party</a></h3>
-<form action="/parties/<%= @party.id %>/checkout" method="POST">
+<h3><a id="show" href="/parties/<%=@party.id%>/receipt">Show Receipt</a></h3><br>
+<h3><a id="show" href="/parties/<%= @party.id %>/close">Closed Parties</a></h3>
+
+
 
