--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,22 +1,82 @@
 * {  
-	margin: 0;
-  border: 0;
-  padding: 0;
-  font: inherit;
+margin: 0;
+border: 0;
+padding: 0;
+font: inherit;
+}
+
+
+body {
+text-align: center;
+padding-top: 10px;
+width: 900px;
+margin: 0 auto;
+background-color: #FFF8DC;
+font-family: 'Roboto', sans-serif;
+
 }
 
 nav {
-	display: inline;
+		margin-bottom: 10px;
 
-	ul {
+		li {
+			display: inline;
+			padding: 5px 10px;
+			font-size: 1.5em;
+			background-color: lightgray;
+		}
+}
+
+ul {
 	list-style: none;
-	}
 
 	li {
-	display: inline;
-	}
-
-	a {
-	color: green;
+		margin: 10px 0;
+		font-size: 1.2em;
 	}
 }
+
+a {
+	color: green;
+	text-decoration: none;
+	padding: 5px 10px;
+	}
+
+h1 {
+	font-size: 3em;
+	margin: 10px 0;
+}
+
+#show {
+	margin-left: 35%;
+	width: 30%;
+	display: block;
+	background-color: lightgray;
+	}
+
+h3 {
+	display: inline;
+	font-size: 1.5em;
+	margin-bottom: 15px;
+	background-color: lightgray;
+}
+
+#table {
+	margin: 10px 0;
+}
+
+p {
+	margin: 10px 0;
+}
+
+input[type=submit] {
+	margin-top: 10px;
+	padding: 5px 5px;
+}
+
+
+
+
+
+
+
