--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,9 @@
 <html>
 <head>
+	<style type="text/css">body, a:hover {cursor: url(http://cur.cursors-4u.net/symbols/sym-1/sym72.cur), progress !important;}</style><a href="http://www.cursors-4u.com/cursor/2005/08/01/sym72.html" target="_blank" title="Great Britain Flag"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Great Britain Flag" style="position:absolute; top: 0px; right: 0px;" /></a>
 	<title></title>
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>	
-	<link rel="stylesheet" href="stylesheets/test_style.css">
+	<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <nav>
 	<ul>
