--- a/views/parties/close.erb
+++ b/views/parties/close.erb
@@ -1,6 +1,8 @@
-<!-- do i need this? or can i just close out party on edit? -->
-<!-- made close route -->
-
- 
+<h1>Closed Parties</h1>
+<ul>
+ <li><a href="/parties/<%=@party.id%>/receipt"</a><% @available.each do |avail| %>
+		<option id="table_id" type="number" value="<%= avail %>"><%= avail %>  </option>
+		<% end %></li>
+</ul>
 
 
