--- a/views/parties/edit.erb
+++ b/views/parties/edit.erb
@@ -1,9 +1,13 @@
-<h2>Edit Info for Table ID: <%= @party.table_id %></h2>
+<h2>Edit Info for Party: <%= @party.party_name %></h2>
 
 <form action="/parties/<%=@party.id%>" method="POST">
 
 <label for="party_guests">Number of Guests:</label>
-<input id="party_guests"type="number" name='party[guests]' min=1 max=6 value='<%=@party.guests%>'>
+<input id="party_guests" type="number" name='party[guests]' min=1 max=6 value='<%=@party.guests%>'>
+<br>
+
+<label for="party_name">Party Name:</label>
+<input id="party_name" type="text" name='party[party_name]' value="<%=@party.party_name%>">
 <br>
 
 <label for="party_paid">Paid:</label>
