--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
 </head>
 <nav>
 	<ul>
+		<li><a href ="/">Home</a></li>
 		<li><a href ="/foods">Menu</a></li>
 		<li><a href ="/orders">Orders</a></li>
 		<li><a href ="/parties">Parties</a></li>
