--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,8 @@ nav {
     display: inline;
     padding: 5px 10px;
     font-size: 1.5em;
-    background-color: lightgray; }
+    background-color: lightgray;
+    border-radius: 6px; }
 
 ul {
   list-style: none; }
@@ -39,13 +40,15 @@ h1 {
   margin-left: 35%;
   width: 30%;
   display: block;
-  background-color: lightgray; }
+  background-color: lightgray;
+  border-radius: 6px; }
 
 h3 {
   display: inline;
   font-size: 1.5em;
   margin-bottom: 15px;
-  background-color: lightgray; }
+  background-color: lightgray;
+  border-radius: 6px; }
 
 #table {
   margin: 10px 0; }
