--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -24,6 +24,7 @@ nav {
 			padding: 5px 10px;
 			font-size: 1.5em;
 			background-color: lightgray;
+			border-radius: 6px;
 		}
 }
 
@@ -52,6 +53,7 @@ h1 {
 	width: 30%;
 	display: block;
 	background-color: lightgray;
+	border-radius: 6px;
 	}
 
 h3 {
@@ -59,6 +61,7 @@ h3 {
 	font-size: 1.5em;
 	margin-bottom: 15px;
 	background-color: lightgray;
+	border-radius: 6px;
 }
 
 #table {
