--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,6 +50,15 @@ h3 {
   background-color: lightgray;
   border-radius: 6px; }
 
+h2 {
+  font-size: 1.2em;
+  background-color: maroon;
+  color: white;
+  border-radius: 6px; }
+
+h4 {
+  font-size: 1.1em; }
+
 #table {
   margin: 10px 0; }
 
@@ -58,6 +67,7 @@ p {
 
 input[type=submit] {
   margin-top: 10px;
-  padding: 5px 5px; }
+  padding: 5px 5px;
+  border-radius: 6px; }
 
 /*# sourceMappingURL=style.css.map */
