committing changes from deadline

--- a/views/parties/new.erb
+++ b/views/parties/new.erb
@@ -14,10 +14,10 @@
 	<input id="party_name" type="text" name='party[party_name]'>
 	<label for="party_employee_id">Server:</label>
 	<select name='party[employee_id]'>
-		<option id="employee_id" type="number" value="1">1</option>
-		<option id="employee_id" type="number" value="2">2</option>
-		<option id="employee_id" type="number" value="3">3</option>
-		<option id="employee_id" type="number" value="4">4</option>
+		<option id="employee_id" type="number" value="1">Flo</option>
+		<option id="employee_id" type="number" value="2">Marge</option>
+		<option id="employee_id" type="number" value="3">Bill</option>
+		<option id="employee_id" type="number" value="4">Wally</option>
 	</select>
 	<input type="submit" value="Add Party">
 	</form>
